# OpenPod

./: README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: pyproject.toml
src/openpod/: __init__.py  __main__.py
src/openpod.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
