[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "openpod"
version = "0.1.0a1"
description = "Open source SDK for Line 6 POD Go preset files"
readme = "README.md"
requires-python = ">=3.12"

authors = [
    { name = "Vinoldy Tan" }
]

dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
