[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "openpod"
version = "0.1.0-alpha"
description = "Open source SDK for Line 6 POD Go preset files"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

authors = [
    { name = "Vinoldy Tan" }
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "black>=24.0",
    "ruff>=0.5",
    "mypy>=1.10"
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
git add .
git commit -m "chore: bootstrap Python project structure"
git push -u origin feature/json-walker
vinol@Rey MINGW64 /c/OpenPod (feature/json-walker)
$ git log --oneline -5
2986dce (HEAD -> feature/json-walker, origin/main, origin/feature/json-walker, origin/HEAD, main, develop) Create README.md
39940e0 Update issue templates

vinol@Rey MINGW64 /c/OpenPod (feature/json-walker)
$

"""
OpenPod

Open source SDK for Line 6 POD Go preset files.
"""

__version__ = "0.1.0-alpha"
